Adds navigation bar links and bootstrap links

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>benjaminkiruubemaranatha.com</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+
 </head>
+
 <body>
     <h1>Benjamin's first website</h1>
+    <div w3-include-html="include/navbar.html"></div>
+
+
+
+
+
+    
+
+    <script src="bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="include/javascript/add.js"></script>
 </body>
+
 </html>
